--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,15 +3,16 @@
 <p><%= @task.details %></p>
 <br>
 <% if @task.completed %>
-  <label class="container">This class is completed
-    <input type="checkbox" checked="checked">
+  <label class="label">This task is completed
+    <input type="checkbox" onclick="return false;" checked="checked">
     <span class="checkmark"></span>
   </label>
 <% else %>
-    <label class="container">This class is not completed yet
-    <input type="checkbox">
-    <span class="checkmark"></span>
+    <label class="label">This task is not completed yet
+    <input type="checkbox" onclick="return false;">
+    <span class="checkmark" ></span>
   </label>
 <% end %>
-<br>
-<%= link_to "Back to list", tasks_path %>
+<hr/>
+<p><%= link_to "Edit this task", taskEdit_path(@task) %></p>
+<p><%= link_to "Back to list", tasks_path %></p>
