--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,5 +1,5 @@
 /* Customize the label (the container) */
-.container {
+.label {
   display: block;
   position: relative;
   padding-left: 35px;
@@ -11,11 +11,11 @@
   -ms-user-select: none;
   user-select: none;
   font-family: roboto;
-  text-decoration: none;
+
 }
 
 /* Hide the browser's default checkbox */
-.container input {
+.label input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -34,12 +34,12 @@
 }
 
 /* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
+.label:hover input ~ .checkmark {
   background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
+.label input:checked ~ .checkmark {
   background-color: #2196F3;
 }
 
@@ -51,12 +51,12 @@
 }
 
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
+.label input:checked ~ .checkmark:after {
   display: block;
 }
 
 /* Style the checkmark/indicator */
-.container .checkmark:after {
+.label .checkmark:after {
   left: 9px;
   top: 5px;
   width: 5px;
@@ -68,6 +68,23 @@
   transform: rotate(45deg);
 }
 
-h1 {
+h1,p {
   font-family: roboto;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container-main {
+  width: 500px;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
 }
