2. added new_object property

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit task</h1>
-<%= render 'formEdit', task: @task %>
+<%= render 'form', task: @task %>
 <hr/>
 <p><%= link_to "Back to list", tasks_path %></p>
 
