--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,5 +9,14 @@
     <%= t.text_field :details, class: 'form-control' %>
   </div>
 
+  <% if !@task.new_record? %>
+    <div class="form-group">
+    <%= t.label :completed %>
+    <%= t.check_box :completed, class: 'form-control' %>
+    </div>
+  <% else %>
+
+  <% end %>
+
   <%= t.submit class: 'btn btn-primary' %>
 <% end %>
